Fixing z-index for tour tips

--- a/src/sass/block/_block.scss
+++ b/src/sass/block/_block.scss
@@ -32,3 +32,9 @@
 #drupal-off-canvas .media-library-selection .media-library-item--grid {
   width: auto;
 }
+
+/** Tour Tips **/
+
+.joyride-tip-guide {
+  z-index: 1050;
+}
